syntax="proto3";

package cmdb.secret;
option go_package="github.com/lifangjunone/cmdb/apps/secret";

import "apps/resource/pb/resource.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";

service Service {
  rpc CreateSecret(CreateSecretRequest) returns(Secret);
  rpc QuerySecret(QuerySecretRequest) returns(SecretSet);
  rpc DescribeSecret(DescribeSecretRequest) returns(Secret);
  rpc DeleteSecret(DeleteSecretRequest) returns(Secret);
}

enum Type {
  API_KEY = 0;
  PASSWORD =1;
}

message CreateSecretRequest {
  // 描述
  // @gotags: json:"description" validate:"required,lte=100"
  string description  = 1;
  // 厂商
  // @gotags: json:"vendor"
  resource.Vendor vendor = 2;
  // 允许同步的区域
  // @gotags: json:"allow_regions"
  repeated string allow_regions = 3;
  // 凭证类型
  // @gotags: json:"crendential_type"
  Type crendential_type = 4;
  // 服务地址, 云商不用填写
  // @gotags: json:"address"
  string address = 5;
  // key
  // @gotags: json:"api_key" validate:"required,lte=100"
  string api_key = 6;
  // secrete
  // @gotags: json:"api_secret" validate:"required,lte=100"
  string api_secret = 7;
  // 请求速率限制, 默认1秒5个
  // @gotags: json:"request_rate"
  int32 request_rate = 8;
  // 创建者
  // @gotags: json:"create_by"
  string create_by = 9;
}

message QuerySecretRequest {
  // 分页参数
  // @gotags: json:"page"
  infraboard.mcube.page.PageRequest page = 1;
  // 关键字参数
  // @gotags: json:"keywords"
  string keywords = 2;
  // 所属Domain
  // @gotags: json:"domain"
  string domain = 14;
  // 所属Namespace
  // @gotags: json:"namespace"
  string namespace = 15;
}

message DescribeSecretRequest {
  string id = 1;
}

message DeleteSecretRequest {
  string id = 1;
}

message Secret {
  // @gotags: json:"id"
  string id = 1;
  // @gotags: json:"create_at"
  int64 create_at = 2;
  // @gotags: json:"data "
  CreateSecretRequest data = 3;
}

message SecretSet {
  int64 total = 1;
  repeated Secret items = 2;
}